First changes to start the Bot with an execution manager